# marvel-search-api

./: docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: marvel_search.py
app/infraestructure/: marvel_request.py
app/schemas/: marvel_api_character_response.py  marvel_character_response.py  marvel_comic_response.py  marvel_search_query_params.py  validate_comic_response.py
app/services/: marvel_service.py
app/settings/: marvel_settings.py
